[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
serde = "1.0"
unicode-segmentation = "1.10.1"
prettify_pinyin = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
url-escape = "0.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = "*"
anyhow = "*"
chinese_detection = "*"
