[package]
name = "cedr"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# tatoebars = { path = "../../doomybotv2/lib/tatoebars", features = ["cnm"] }
once_cell = "*"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "chrono",
] }
tokio = { version = "1.32.0", features = ["rt", "macros"] }
reqwest = { version = "0.11.20" }
anyhow = "1.0.75"
libflate = "2.0.0"
unicode-segmentation = "1.10.1"
itertools = "0.11.0"
prettify_pinyin = "2.0.0"
shared = { path = "../src-shared", features = [] }
chinese_detection = "2.0.3"
indexmap = { version = "1.9.3", features = ["std"] }
# jieba-rs = "0.6.8"
strum = "0.25"
strum_macros = "0.25"
etcetera = "*"
fs_extra = "1.3.0"
ron = "0.8.1"
tauri-plugin-dialog = "2.0.0-alpha"
tauri-plugin-log = "2.0.0-alpha"
log = "*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [lib]
# crate-type = ["staticlib", "cdylib", "rlib"]
