[package]
name = "cedr_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlOptionElement",
    "HtmlFormElement",
    "History",
    "Window",
] }
js-sys = "0.3.64"
hex_color = "2"
gloo-console = "0.3.0"
pinyin = "0.10"
cedict = "0.3"
yew-router = "0.18.0"
tatoebars = { path = "../../doomybotv2/lib/tatoebars", features = ["cnm"] }
anyhow = "1.0.75"
unicode-segmentation = "1.10.1"
itertools = "0.11.0"
chinese_detection = "2.0.3"
shared = { path = "../src-shared" }
