[package]
name = "cedr_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlOptionElement",
    "HtmlFormElement",
    "HtmlSpanElement",
    "History",
    "Window",
] }
js-sys = "0.3.64"
hex_color = "2"
gloo-console = "0.3.0"
yew-router = "0.18.0"
# tatoebars = { path = "../../doomybotv2/lib/tatoebars", features = ["cnm"] }
shared = { path = "../src-shared" }
